--- a/src/app/manage-employees/components/employee-form/employee-form.component.html
+++ b/src/app/manage-employees/components/employee-form/employee-form.component.html
@@ -1,3 +1,33 @@
-<p>
-  employee-form works!
-</p>
+<div class="container-fluid bg-light py-3">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <div class="card card-body">
+        <h3 class="text-center mb-4">Add Employee</h3>
+        <!-- <div class="alert alert-danger">
+          <a class="close font-weight-light" data-dismiss="alert" href="#">×</a>Password is too short.
+        </div> -->
+        <fieldset>
+          <div class="form-group has-error">
+            <input class="form-control input-lg" placeholder="First Name" name="fname" type="text">
+          </div>
+          <div class="form-group has-success">
+            <input class="form-control input-lg" placeholder="Last Name" name="lname" value="" type="text">
+          </div>
+          <div class="form-group has-success">
+            <input class="form-control input-lg" placeholder="Phone" name="phone" value="" type="text">
+          </div>
+          <div class="form-group">
+            <select class="form-control input-lg">
+              <option selected="">Department</option>
+              <option *ngFor="let item of departments" [value]="item.id">
+                {{item.name}}
+              </option>
+            </select>
+          </div>
+          <input class="btn btn-lg btn-primary" value="Save" type="submit">
+          <input class="btn btn-lg btn-primary" value="Cancel" type="reset">
+        </fieldset>
+      </div>
+    </div>
+  </div>
+</div>
