--- a/src/app/manage-employees/containers/employees/employees.component.html
+++ b/src/app/manage-employees/containers/employees/employees.component.html
@@ -1,7 +1,10 @@
-<!-- Example DataTables Card-->
-<div class="card mb-3">
+<div class="card mb-3 mT-80">
   <div class="card-header">
-    <i class="fa fa-table"></i> Data Table Example</div>
+    <i class="fa fa-table"></i> Employee list
+    <span>
+      <button [routerLink]="['new']">Add new employee</button>
+    </span>
+  </div>
   <div class="card-body">
     <app-employee-table [employees]="employees" (edit)="edit($event)" (remove)="delete($event)"></app-employee-table>
   </div>
